# littlewood-rs

./: .gitignore  Cargo.toml  LICENCE  README.md
draw/: Cargo.toml
draw/src/: main.rs  plot.rs
lib/: Cargo.toml  poly.rs
root/: Cargo.toml  Polynomials.json
root/src/: main.rs  root.rs
src/: main.rs
