workspace = { members = [ "draw", "gen", "root"] }
[package]
name = "littlewood-rs"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generate-littlewood = {path = "./gen"}
root-complex = {path = "./root"}
plot-complex = {path = "./draw"}
clap = { version = "4.5.4", features = ["derive", "cargo"] }
polynomen = "1.1.0"
