[package]
name = "plot-complex"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
serde_json = "1.0.114"

[lib]
path = "./src/plot.rs"
