[package]
name = "root-complex"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
poly = {path = "../lib"}
polynomen = "1.1.0"
serde_json = "1.0.114"

[lib]
path = "./src/root.rs"